invites code started

--- a/app/assets/stylesheets/group_setup.css.scss
+++ b/app/assets/stylesheets/group_setup.css.scss
@@ -27,9 +27,9 @@
     border-radius: 4px;
     background-color: #eeeeee;
   }
-  #group_setup_invite_body {
-    height: 70px;
-  }
+  #group_setup_invite_body { height: 70px; }
+  #group_setup_invite_body_uneditable { height: 170px; }
+
   #next, #send_invites {
     float: right;
     margin-left: 5px;
