--- a/app/views/groups/group_setup/setup.html.haml
+++ b/app/views/groups/group_setup/setup.html.haml
@@ -4,84 +4,82 @@
       %ul.nav.nav-tabs
         %li.disabled.active
           %a{ href: "#group-tab" }
-            Set up your group
+            = t("group_setup_form.tabs.group")
         %li.disabled
           %a{ href: "#discussion-tab" }
-            Start a discussion
+            = t("group_setup_form.tabs.discussion")
         %li.disabled
           %a{ href: "#motion-tab" }
-            Start a decision
+            = t("group_setup_form.tabs.motion")
         %li.disabled
           %a{ href: "#invite-tab" }
-            Invite your group
+            = t("group_setup_form.tabs.invites")
       .tab-content#wizard-tabs
         .tab-pane.active#group-tab
           .row
             .span9
-              %h1= t("group_header")
+              %h1= t("group_setup_form.group_header")
               .control-group
                 = f.input :group_name, input_html: { class: 'validate-presence' }
-                %span.inline-help= t("group_name_error")
+                %span.inline-help= t("group_setup_form.errors.group_name")
               .control-group
                 = f.input :group_description, input_html: { class: 'validate-presence' }
-                %span.inline-help= t("group_description_error")
-              %h2= t("group_settings_header")
+                %span.inline-help= t("group_setup_form.errors.group_description")
+              %h2= t("group_setup_form.group_settings_header")
           .row
             .span5
-              %p= t("group_settings_blurb")
-              = f.input :viewable_by, :collection => {'Public - anyone with the link can see this group' => 'everyone', 'Members - only members of this group can see it' => 'members'}, :as => 'radio_buttons', :label => "Who can see this group?"
+              %p= t("group_setup_form.group_settings_blurb")
+              = f.input :viewable_by, :collection => {'Public - anyone with the link can see this group' => 'everyone', 'Members - only members of this group can see it' => 'members'}, :as => 'radio_buttons'
               %br
-              = f.input :members_invitable_by, :label => "Who can invite members to this group?", :as => "radio_buttons", :collection => {'All group members' => 'members', 'Admins only' => 'admins'}
+              = f.input :members_invitable_by, :as => "radio_buttons", :collection => {'All group members' => 'members', 'Admins only' => 'admins'}
         .tab-pane#discussion-tab
           .row
             .span5
-              %h1 Set up your first discussion
-              %p Setting up an engaging discussion relevant to your group before inviting people in will dramatically increase the likelihood of your group succeeding in using Loomio long-term.
+              %h1= t("group_setup_form.discussion_header")
+              %p= t("group_setup_form.discussion_blurb")
           .row
             .span9
               .control-group
                 = f.input :discussion_title, input_html: { class: 'validate-presence' }
-                %span.inline-help Please fill in the discussion title
+                %span.inline-help= t("group_setup_form.errors.discussion_title")
               .control-group
                 = f.input :discussion_description, input_html: { class: 'validate-presence' }
-                %span.inline-help Please fill in the discussion description
+                %span.inline-help= t("group_setup_form.errors.discussion_description")
         .tab-pane#motion-tab
           .row
             .span5
-              %h1 Start a decision
-              %p Often you’d wait for the discussion to progress for a while before making a proposal for your group to decide on. For the first discussion however, it’s a good idea to have a proposal open for everyone to participate in.
-              %p A good proposal contains a plan of action for the group. Make your proposal as clear and succinct as possible so people know exactly what it means when they agree or disagree.
-              %p You can set up your first proposal here:
+              %h1= t("group_setup_form.motion_header")
+              %p= t("group_setup_form.motion_blurb")
           .row
             .span9
               .control-group
                 = f.input :motion_title, input_html: { class: 'validate-presence' }
-                %span.inline-help Please fill in the motion title
+                %span.inline-help= t("group_setup_form.errors.motion_title")
               .control-group
                 = f.input :motion_description, input_html: { class: 'validate-presence' }
-                %span.inline-help Please fill in the motion description
+                %span.inline-help= t("group_setup_form.errors.motion_description")
               .control-group.motion-closing-inputs
-                = f.input :close_at_date, as: :date_picker, label: 'Close date', input_html: { class: 'motion-close-at-date' }
+                = f.input :close_at_date, as: :date_picker, input_html: { class: 'motion-close-at-date' }
                 = f.input :close_at_time, as: :select, collection: populate_time_select, include_blank: false, label: false, input_html: { class: 'motion-close-at-time' }
                 = f.time_zone_select :close_at_time_zone, nil, {}, { class: 'motion-close-at-time-zone', label: false }
-                %span.inline-help Please give a future close date
+                %span.inline-help= t("group_setup_form.errors.motion_closing_inputs")
         .tab-pane#invite-tab
           .row
             .span9
-              %h1 Invite users
+              %h1= t("group_setup_form.invites_header") 
               .control-group
                 = f.input :admin_email, input_html: { class: 'validate-presence', :value => current_user.email }
-                %span.inline-help Please fill in the an administrator email address
+                %span.inline-help= t("group_setup_form.errors.admin_email")
               .control-group
                 = f.input :members_list, input_html: { class: 'validate-presence' }
-                %span.inline-help Please fill in the invited email addresse(s)
+                %span.inline-help= t("group_setup_form.errors.members_list")
               = f.input :invite_subject, input_html: { class: 'validate-presence', :value => t("invitation_to_join_group.subject", group: @group_setup.group_name), disabled: true }
               .control-group
-                = f.input :invite_body, input_html: { class: 'validate-presence', value: "I've just set up our group to make decisions onine using a new tool called Loomio. It will help us get stuff done without having to meet in person or drown in emails." }
-                %span.inline-help Please fill in the invite body
+                = f.input :invite_body, input_html: { class: 'validate-presence', value: t("invitation_to_join_group.body_editable", group: @group_setup.group_name) }
+                %span.inline-help= t("group_setup_form.errors.invites_body")
           .row
-            .span5#invite-body
-              %p= t("invitation_to_join_group.uneditable_body", invite_link: "[invite link here]", user_name: @current_user, group_name: @group_setup.group_name)
+            .span5
+              = f.input :invite_body_uneditable, label: false, input_html: { value: t("invitation_to_join_group.body_uneditable", invite_link: "[invite link here]", user_name: @current_user.name, group_name: @group_setup.group_name), disabled: true }
       .row
         .span5
           = f.submit 'Send invites', class: 'btn btn-info btn-large', id: 'send_invites', :data => { :disable_with => "Send invites" }
