--- a/app/views/groups/group_setup/setup.html.haml
+++ b/app/views/groups/group_setup/setup.html.haml
@@ -20,7 +20,7 @@
             .span9
               %h1= t("group_setup_form.group_header")
               .control-group
-                = f.input :group_name, input_html: { class: 'validate-presence', hint: 'hello', error: 'seeya' }
+                = f.input :group_name, input_html: { class: 'validate-presence'}
                 %span.inline-help= t("group_setup_form.errors.group_name")
               .control-group
                 = f.input :group_description, input_html: { class: 'validate-presence' }
