--- a/app/views/application/_marketing_header.html.haml
+++ b/app/views/application/_marketing_header.html.haml
@@ -13,20 +13,11 @@
       .nav-collapse
         %ul.nav
           %li
-            %a{href: "#{path_var}#why", class: scroll_trigger} Why
+            %a{href: purpose_path} Purpose
           %li
-            %a{href: "#{path_var}#how", class: scroll_trigger} How
+            %a{href: how_it_works_path} How it Works
           %li
-            %a{href: "#{path_var}#who", class: scroll_trigger} Who
+            %a{href: about_us_path} About Us
         %ul.nav.pull-right
           %li
             %a{href: user_session_path} Sign In
-
-.container#top
-  .section#first
-    .inner-container
-      .row-fluid
-        .span3 &nbsp;
-        .span6
-          =link_to image_tag("logo-426px-mauve-matte.png"), "/"
-          %h2 collaborative decision-making
