permissions and format invitee display

--- a/app/assets/stylesheets/group_setup.css.scss
+++ b/app/assets/stylesheets/group_setup.css.scss
@@ -39,4 +39,10 @@
   #wizard-tabs { min-height: 600px; }
 }
 
-#finished { float: right; }
+body.group_setup.finish {
+  .recipient-list {
+    height: 300px;
+    overflow:scroll;
+  }
+  #finished { float: right; }
+}
