--- a/app/assets/stylesheets/groups.css.scss
+++ b/app/assets/stylesheets/groups.css.scss
@@ -299,7 +299,7 @@ input#user_email{
 }
 
 /**** Private group form ****/
-#private-message {
+#permission-message {
   color: $mid-grey;
   text-align: center;
   width: 50%;
