--- a/app/views/groups/group_setup/finished.html.haml
+++ b/app/views/groups/group_setup/finished.html.haml
@@ -2,7 +2,11 @@
   .span5
     %h1 Finished!
     %p Invites have successfully been sent to:
-    %p= @invite_people.recipients
+    .recipient-list
+      - @invite_people.recipient_list.each do |recipient|
+        = recipient
+        %br
+    %br
     %p It’s a good idea to send out a follow-up email to everyone you’ve invited to make sure that the invite didn’t accidentally go to their spam folder, and to check that they’re not having trouble signing in.
     %p That should be enough to get you started!
     %p We’re always happy to hear feedback about how we can make Loomio even easier to use. Feel free to [get in touch] with any questions.
