--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1,4 +1,8 @@
-body.sessions.new, body.pages.show, body.pages.purpose, body.pages.how_it_works, body.pages.about_us, body.woc.index, body.group_requests.start_new_group {
+body.sessions.new, 
+body.pages.home, 
+body.pages.purpose, 
+body.pages.how_it_works, 
+body.pages.about_us, body.woc.index, body.group_requests.start_new_group {
   color: black;
 
   p, label{
