--- a/app/views/application/_marketing_header.html.haml
+++ b/app/views/application/_marketing_header.html.haml
@@ -1,14 +1,7 @@
-- if params[:id] == 'home'
-  - path_var = ''
-  - scroll_trigger = 'scroll-nav'
-- else
-  - path_var = '/pages/home'
-  - scroll_trigger = ''
-
 .navbar.navbar-inverse.navbar-fixed-top
   .navbar-inner
     .container
-      %a.brand{href: "#{path_var}#top", class: scroll_trigger}
+      %a.brand{href: '/'}
         =image_tag("top-bar-loomio.png")
       .nav-collapse
         %ul.nav
