--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -12,12 +12,17 @@
     .inner-container
       .row-fluid
         .span6
-          %h2.buffer Welcome to Loomio
-          %p Loomio is a collaborative decision-making tool.
-          %p Loomio reduces the cost of participation in decision-making, making it easy for any group to translate online communication into real-world collective action.
-          %p We're in 'private beta', which means we're not accepting public sign-ups yet. If you want to get involved early, click here:
-          %p.no-bottom-margin
-            %a.btn.btn-large.btn-primary{href: request_new_group_path} Sign up to be a beta tester
+          %h2.buffer Loomio is a collaborative decision-making tool.
+          %p Loomio aims to make participation in decision-making easy for any group. 
+          %p
+            %a{href: purpose_path} Purpose
+            \-
+            %a{href: how_it_works_path} How it Works
+            \-
+            %a{href: about_us_path} About Us
+          %p 
+            We're in 'private beta', which means we're manually approving sign-ups. If you want to get involved early, you can
+            %a{href: request_new_group_path} sign up to be a beta tester
         .span6
-          %h2.buffer &nbsp;
+          %h4.buffer &nbsp;
           <iframe class="no-bottom-margin" src="https://player.vimeo.com/video/51331688?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;color=ff9933" width="426" height="264" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
