--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,28 +1,16 @@
-.container#top
-  .section#first
-    .inner-container
-      .row-fluid
-        .span3 &nbsp;
-        .span6
-          =link_to image_tag("logo-426px-mauve-matte.png"), "/"
-          %h2 collaborative decision-making
-
 .container
-  .section
+  .section.first
     .inner-container
       .row-fluid
         .span6
-          %h2.buffer Loomio is a collaborative decision-making tool.
-          %p Loomio aims to make participation in decision-making easy for any group. 
-          %p
-            %a{href: purpose_path} Purpose
-            \-
-            %a{href: how_it_works_path} How it Works
-            \-
-            %a{href: about_us_path} About Us
+          %h2.buffer Creating a world where it’s easy for anyone to participate in decisions that affect them.
+
           %p 
-            We're in 'private beta', which means we're manually approving sign-ups. If you want to get involved early, you can
-            %a{href: request_new_group_path} sign up to be a beta tester
+            Loomio is a user-friendly app for building shared understanding, making clear decisions and turning talk into action.
+            =link_to 'Find out more', about_path
+
+          %p 
+            We're still in development - if you want to get involved early
+            %a{href: request_new_group_path} apply to get your group on Loomio.
         .span6
-          %h4.buffer &nbsp;
           <iframe class="no-bottom-margin" src="https://player.vimeo.com/video/51331688?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;color=ff9933" width="426" height="264" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
