--- a/app/views/groups/invitations/new.html.haml
+++ b/app/views/groups/invitations/new.html.haml
@@ -1,7 +1,3 @@
-.row
-  .span6
-    %h1 Invite people to join #{@group.name}
-    = simple_form_for(@invite_people, url: group_invitations_path(@group), method: :post) do |f|
-      =f.input :recipients
-      =f.input :message_body
-      =f.submit 'Send invitations', :class => "btn btn-info btn-large", :data => { disable_with: 'Send invitations' }
+= simple_form_for(@invite_people, url: group_invitations_path(@group), method: :post) do |f|
+  = render 'groups/invite_users', form: f, group: @group
+  = f.submit 'Send invitations', :class => "btn btn-info btn-large run-validations", :data => { disable_with: 'Send invitations' }
