--- a/app/assets/stylesheets/invitations.css.scss
+++ b/app/assets/stylesheets/invitations.css.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the invitations controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body.group_setup.setup, body.invitations.new {
+
+  #invitees { height: 50px; }
+  // #message_body {
+  //   height: 200px;
+  //   border: 1px solid #ccc;
+  //   padding: 10px;
+  //   -webkit-border-radius: 4px;
+  //   -moz-border-radius: 4px;
+  //   border-radius: 4px;
+  //   background-color: #eeeeee;
+  // }
+}
