i don't know what I'm doing

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -16,7 +16,7 @@
 @import "bootstrap/type";
 /*@import "bootstrap/code";*/
 @import "bootstrap/forms";
-/*@import "bootstrap/tables";*/
+@import "bootstrap/tables";
 
 /*// Components: common*/
 /*@import "bootstrap/sprites";*/
@@ -57,205 +57,6 @@
 // TODO: // * define site color variables
 // * mixin for gradient
 
-// CSS reset - does this exist elsewhere?
-ul, ol, li {
-  margin: 0;
-  padding: 0;
-}
-ul { list-style: none; }
-
-html { height: 100%; }
-
-body {
-  background-color: $main-background;
-  height: 100%;
-  color: $dark-grey;
-}
-
-hr {
-  margin: 1px;
-}
-
-// Override bootstrap 2.3 headers with 2.0.3 styles
-h1, h2, h3, h4, h5, h6 {
-  margin: 0;
-  font-family: inherit;
-  font-weight: bold;
-  color: inherit;
-  text-rendering: optimizelegibility;
-}
-h1 {
-  font-size: 30px;
-  line-height: 36px;
-}
-h2 {
-  font-size: 24px;
-  line-height: 36px;
-}
-h3 {
-  font-size: 18px;
-  line-height: 27px;
-}
-h4 { font-size: 14px; }
-h5 { font-size: 12px; }
-h6 { font-size: 11px; }
-h4, h5, h6 { line-height: 18px; }
-
-.font-size-85pc{
-  font-size: 85%;
-}
-
-// structural elements (containers etc.)
-.page-container { margin-top: 30px; }
-
-.popover {
-  width: 276px;
-  z-index: 10000;
-}
-
-.sub_group {font-size: $font-tiny;}
-
-// #start-new-discussion { margin: 0 0 20px 2px; }
-.main-content { margin-top: 20px; }
-
-
-li.empty-list-message {
-  padding: 5px 0px;
-}
-
-/**** Structural elements ****/
-ul.selector-list.bordered { border-top: 1px solid $light-grey }
-li.selector-item {
-  background-color: $unhighlighted;
-  color: $dark-grey;
-  font-weight: normal;
-  border-bottom: 1px solid $light-grey;
-}
-
-li.selector-item a.selector-link {
-  display: block;
-  padding: 5px 5px 5px 15px;
-}
-li.selector-item a.selector-link:hover {
-  background-color: $selector;
-  text-decoration: none;
-  .group-activity-indicator.unread-group-activity { background-color: $group-activity; }
-}
-
-.alert {
-  margin: 10px 0;
-}
-
-// color coded urgency labels
-.color-urgent { background-color: #CA3232; }
-.color-warning { background-color: #F89406; }
-.color-ok { background: #016B01; }
-
-.page-title h1{
-    font-size: 24px;
-    margin-bottom: 0;
-}
-
-
-.rm-margin-top{
-  margin-top: 0;
-}
-
-.rm-margin-bottom{
-  margin-bottom: 0;
-}
-
-.hidden {
-  display: none;
-}
-
-/* For modern browsers */
-.cf:before,
-.cf:after {
-    content:"";
-    display:table;
-}
-.cf:after {
-    clear:both;
-}
-
-.word-break {
-  /* The following styles prevent unbroken strings from breaking the layout */
-  overflow: auto;
-  white-space: -moz-pre-wrap; /* Mozilla */
-  white-space: -hp-pre-wrap; /* HP printers */
-  white-space: -o-pre-wrap; /* Opera 7 */
-  white-space: -pre-wrap; /* Opera 4-6 */
-  white-space: pre-wrap; /* CSS 2.1 */
-  white-space: pre-line; /* CSS 3 (and 2.1 as well, actually) */
-  word-wrap: break-word; /* IE */
-  -moz-binding: url('xbl.xml#wordwrap'); /* Firefox (using XBL) */
-}
-
-/* For IE 6/7 (trigger hasLayout) */
-.cf {
-    zoom:1;
-}
-
-ul.loomio-process-flow {
-  height: 100px;
-  margin: 0 auto 20px auto;
-  border: 1px solid $light-grey;
-  @include border-radius(8px);
-  /*box-shadow: 2px 2px 2px $light-grey;*/
-  background-color: white;
-  text-align: center;
-  padding: 0;
-  li.process-flow-item {
-    float: left;
-    padding: 0 72px;
-  }
-  li.process-flow-item .process-flow-icon {
-    background-repeat: no-repeat;
-    margin: 20px auto 0 auto;
-    height: 40px;
-    width: 40px;
-  }
-  li.process-flow-item#start { padding: 0 48px; }
-  li.process-flow-item#start .process-flow-icon {
-    background-image:url('/assets/loomio-40.png');
-    width: 107px;
-  }
-  li.process-flow-item#enguage .process-flow-icon {
-    background-image:url('/assets/discussion-40.png');
-    opacity: 0.6;
-  }
-  li.process-flow-item#decide .process-flow-icon {
-    background-image:url('/assets/pie-40.png');
-  }
-  li.process-flow-item#act .process-flow-icon {
-    background-image:url('/assets/action.png');
-  }
-  li.process-flow-item h1 {
-    line-height: 1em;
-    font-size: 1.6em;
-    color: $mid-grey;
-  }
-  li.process-flow-arrow {
-    display: inline-block;
-    float: left;
-    background-image:url('/assets/process-flow-arrow.png');
-    background-repeat: no-repeat;
-    height: 100px;
-    width: 32px;
-  }
-}
-
-/**** buttons ****/
-.btn-app {
-  line-height: 18px;
-  padding: 4px 8px 4px 8px;
-  width: 180px;
-  font-size: $font-medium;
-  text-align: left;
-}
-.group-options .btn-app.dropdown-toggle{ width: 110px }
-.btn-grey { color: $mid-grey; }
 a.btn-icon:hover { color: $dark-grey; }
 body.sessions.new, 
 body.pages.home, 
@@ -285,19 +86,7 @@ body.pages.about_us, body.woc.index, body.group_requests.start_new_group {
     margin-top: 50px;
     margin-bottom: -50px;
   }
-  .navbar{
-    .navbar-inner .container{
-      margin-top: 0;
-    }
-    a.brand{
-      padding-bottom: 0;
-      margin-top:  -6px;
-      margin-left: 20px;
-    }
-    .pull-right{
-      padding-right: 34px;
-    }
-  }
+
   .container{
     .subhead{
       padding-bottom: 24px;
