--- a/app/views/groups/group_setup/setup.html.haml
+++ b/app/views/groups/group_setup/setup.html.haml
@@ -58,11 +58,7 @@
               .control-group
                 = f.input :motion_description, input_html: { class: 'validate-presence' }
                 .inline-help= t("group_setup_form.errors.motion_description")
-              .control-group.motion-closing-inputs
-                = f.input :close_at_date, as: :date_picker, input_html: { class: 'motion-close-at-date' }
-                = f.input :close_at_time, as: :select, collection: populate_time_select, include_blank: false, label: false, input_html: { class: 'motion-close-at-time' }
-                = f.time_zone_select :close_at_time_zone, nil, { default: @current_user.time_zone }, class: 'motion-close-at-time-zone'
-                .inline-help= t("group_setup_form.errors.motion_closing_inputs")
+              = render 'motions/close_at_inputs', form: f, user: @current_user
         .tab-pane#invite-tab
           = render 'groups/invite_users', form: f, group: @group
       .row
