--- a/app/views/motions/_form.html.haml
+++ b/app/views/motions/_form.html.haml
@@ -7,11 +7,7 @@
         = f.input :name, id: "motion-name"
     .row
       .span9
-        .control-group.motion-closing-inputs
-          = f.input :close_at_date, as: :date_picker, label: t(:closing), input_html: { class: 'motion-close-at-date' }
-          = f.input :close_at_time, as: :select, collection: populate_time_select, include_blank: false, label: false,input_html: { class: 'motion-close-at-time' }
-          = f.time_zone_select :close_at_time_zone, nil, {default: time_zone}, class: 'motion-close-at-time-zone'
-          %span.inline-help= t(:proposal_close_date_error)
+        = render 'motions/close_at_inputs', form: f, user: @current_user
     .row
       .span5
         #description
