--- a/app/views/discussions/show.html.haml
+++ b/app/views/discussions/show.html.haml
@@ -33,7 +33,10 @@
                   - else
                     %li.selector-item.current-proposal
                       = render '/motions/motion_preview', motion: @current_motion, this_group: @group
-                  = render '/motions/edit_close_date', motion: @current_motion, input_time: @input_time
+      
+            - if can? :edit_close_date, @current_motion
+              = render '/motions/edit_close_date', motion: @current_motion, user: @current_user, input_time: @input_time
+
             - if @discussion.closed_motions.count > 0
               #previous-proposals
                 .clearfix
