--- a/app/views/admin/group_requests/defer_and_send_form.html.erb
+++ b/app/views/admin/group_requests/defer_and_send_form.html.erb
@@ -2,12 +2,12 @@
   <div class="span6">
   <h2>Send Defer Email</h2>
   <h3>To: <%=@group_request.admin_email %></h3>
-  <h3>Subject: WHAAT IS THE SUBJET</h3>
+  <h3>Subject: <%=t('defered_email.subject') %></h3>
 
   <%= simple_form_for @group_request, url: defer_and_save_admin_group_request_path do |f| %>
     <%= f.input :defered_until, :as => :string, :input_html => {:class => 'datepicker'} %>
     <br />
-    <textarea name="message_body">
+    <textarea name="message_body", rows=20>
 Dear <%= @group_request.name %>
 Dear Hippos!
 
