--- a/app/views/invitations/please_sign_in.html.haml
+++ b/app/views/invitations/please_sign_in.html.haml
@@ -1,18 +1,25 @@
-%h1 #{@invitation.inviter_name} invited you to join #{@invitation.group_name} on Loomio
-.signup-form
-  %p New to Loomio? You'll need to set up an account before you can join you group.
-  =simple_form_for(@user, url: user_registration_path) do |f|
-    =text_field_tag :javascript_time_zone, 'undefined'
-    =f.input :name
-    =f.input :email
-    =f.input :password
-    =f.input :password_confirmation, label: 'Confirm Password'
-    =f.submit t("devise.registrations.sign_up")
+.container
+  .row
+    .span6.offset3
+      %h1 Welcome to Loomio
+      %p Your request to start a new group on Loomio has been approved! You'll need to set up a new account before you can create your group.
 
-.signin-form
-  %p Already a loomio user? Sign in here:
-  =simple_form_for(@user, url: user_session_path) do |f|
-    =text_field_tag :javascript_time_zone, 'undefined'
-    =f.input :email
-    =f.input :password
-    =f.submit t("devise.sessions.sign_in")
+  .row
+    .span4.offset3
+      .signup-form
+        %p
+          %strong Sign up
+          %br
+      =simple_form_for(@user, url: user_registration_path) do |f|
+
+        =f.input :name
+        =f.input :email
+        =f.input :password
+        =f.input :password_confirmation, label: 'Confirm Password'
+        =f.submit t("devise.registrations.sign_up"), class: "btn btn-info btn-large"
+  .row
+    .span6.offset3
+      %p
+        If you've already got an account,
+        %a
+          click here to sign in
