--- a/app/assets/stylesheets/group_requests.css.scss
+++ b/app/assets/stylesheets/group_requests.css.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the admin/groups controller here.
 // They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+// You can use Sass (SCSS) here: http://sass-lang.com
+
+body.group_requests.create {
+  textarea { height: 80px; }
+}
