--- a/app/views/groups/group_setup/setup.html.haml
+++ b/app/views/groups/group_setup/setup.html.haml
@@ -1,24 +1,40 @@
 .row
-  .span9#group-setup
+  .span12#group-setup
     = simple_form_for @group_setup, url: finish_group_path, method: :put do |f|
       %ul.nav.nav-tabs
         %li.disabled.active
+          %a{ href: "#intro-tab" }
+            = t("group_setup_form.tabs.intro")
+        %li.disabled
           %a{ href: "#group-tab" }
             = t("group_setup_form.tabs.group")
         %li.disabled
           %a{ href: "#discussion-tab" }
             = t("group_setup_form.tabs.discussion")
         %li.disabled
-          %a{ href: "#motion-tab" }
-            = t("group_setup_form.tabs.motion")
-        %li.disabled
           %a{ href: "#invite-tab" }
             = t("group_setup_form.tabs.invites")
       .tab-content#wizard-tabs
-        .tab-pane.active#group-tab
+        .tab-pane.active#intro-tab
           .row
             .span5
-              %h1= t("group_setup_form.group_header")
+              %h1 Coordinating your first Loomio group
+              %br
+              %p As the coordinator, you’re responsible for setting up your Loomio group and inviting everyone in.
+              %p As well as learning how to use a new piece of software, your group will be learning new processes for collaborating more effectively and making good decisions together.
+              %p Take a minute to think about how you can create an experience that immediately engages your new members, who will be seeing Loomio for the first time.
+              %p People will want to know why they’ve been invited, what’s expected of them, and why it’s worth their time to learn how to use a new tool.
+
+              %h2 Ready to get started?
+              %p
+                %a{class: "btn btn-large btn-info", style: "font-weight: bold", id: "start"}
+                  Start setting up your group!
+              / %p.no-bottom-margin
+              /   %small Need extra help? <a href="#">Read more about our facilitation services here</a>.
+        .tab-pane#group-tab
+          %h1= t("group_setup_form.group_header")
+          .row
+            .span5
               .control-group
                 = f.input :group_name, input_html: { class: 'validate-presence' }
                 .inline-help= t("group_setup_form.errors.group_name")
@@ -26,17 +42,17 @@
                 = f.input :group_description, input_html: { class: 'validate-presence' }
                 .inline-help= t("group_setup_form.errors.group_description")
               %h2= t("group_setup_form.group_settings_header")
+            .span4.offset1.more-help= t("group_setup_form.group_more_help").html_safe
           .row
             .span5
-              %p= t("group_setup_form.group_settings_blurb")
               = f.input :viewable_by, :collection => {'Public - anyone with the link can see this group' => 'everyone', 'Members - only members of this group can see it' => 'members'}, :as => 'radio_buttons'
               %br
-              = f.input :members_invitable_by, :as => "radio_buttons", :collection => {'All group members' => 'members', 'Admins only' => 'admins'}
+              = f.input :members_invitable_by, :as => "radio_buttons", :collection => {'All group members' => 'members', 'Coordinators only' => 'admins'}
+
         .tab-pane#discussion-tab
           .row
             .span5
               %h1= t("group_setup_form.discussion_header")
-              %p= t("group_setup_form.discussion_blurb")
           .row
             .span5
               .control-group
@@ -45,26 +61,14 @@
               .control-group
                 = f.input :discussion_description, input_html: { class: 'validate-presence' }
                 .inline-help= t("group_setup_form.errors.discussion_description")
-        .tab-pane#motion-tab
-          .row
-            .span5
-              %h1= t("group_setup_form.motion_header")
-              %p= t("group_setup_form.motion_blurb")
-          .row
-            .span5
-              .control-group
-                = f.input :motion_title, input_html: { class: 'validate-presence' }
-                .inline-help= t("group_setup_form.errors.motion_title")
-              .control-group
-                = f.input :motion_description, input_html: { class: 'validate-presence' }
-                .inline-help= t("group_setup_form.errors.motion_description")
-              = render 'motions/close_at_inputs', form: f, user: @current_user
+            .span4.offset1.more-help= t("group_setup_form.discussion_more_help").html_safe
+
         .tab-pane#invite-tab
           = render 'groups/invite_users', form: f, group: @group
       .row
         .span5
-          = f.submit 'Send invites', class: 'btn btn-info btn-large run-validations', id: 'send_invites', :data => { :disable_with => "Send invites" }
-          = link_to 'Next', '#', class: 'btn btn-info btn-large', id: 'next'
-          = link_to 'Back', '#', class: 'btn btn-warning btn-large', id: 'prev'
+          = f.submit "Finish setup", class: 'btn btn-info btn-large run-validations', id: 'send_invites', :data => { :disable_with => "Send invites" }
+          = link_to t('next'), '#', class: 'btn btn-info btn-large', id: 'next'
+          = link_to t('prev'), '#', class: 'btn btn-warning btn-large', id: 'prev'
       .row
         .span5#saved-at
