modal help-notices added

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -63,6 +63,8 @@ h4, h5, h6 { line-height: 18px; }
   z-index: 10000;
 }
 
+.modal-backdrop { background: #999; }
+
 .sub_group {font-size: $font-tiny; }
 
 // #start-new-discussion { margin: 0 0 20px 2px; }
