--- a/app/views/discussions/show.html.haml
+++ b/app/views/discussions/show.html.haml
@@ -33,7 +33,7 @@
                   - else
                     %li.selector-item.current-proposal
                       = render '/motions/motion_preview', motion: @current_motion, this_group: @group
-      
+
             - if can? :edit_close_date, @current_motion
               = render '/motions/edit_close_date', motion: @current_motion, user: @current_user, input_time: @input_time
 
@@ -49,3 +49,6 @@
                         %li.selector-item= render closed_motion, unique_votes: closed_motion.unique_votes, this_group: @group
                       - else
                         %li.selector-item= render '/motions/motion_preview', motion: closed_motion, this_group: @group
+
+/ - if user_signed_in?#  && (not current_user.has_read_discussion_notice)
+/   = render "application/help_text", header: t("discussion_help_text.header"), message: t("discussion_help_text.message").html_safe, path: dismiss_discussion_notice_for_user_path
