--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -27,3 +27,6 @@
     =render 'membership_requests', group: @group
     =render 'members', group: @group
   =render '/application/closed_motions', user: nil, group: @group
+
+/ - if user_signed_in?# && (not current_user.has_read_group_notice)
+/   = render 'application/help_text', header: t('group_help_text.header'), message: t('group_help_text.message').html_safe, path: dismiss_group_notice_for_user_path
