--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,7 +16,7 @@
       = render 'announcements' if user_signed_in?
       = render 'header'
       = render 'flash_messages', :flash => flash, :on_landing_page => false
-      = render_help_text(@group)
+      = render_help_text if user_signed_in?
       .page-container
         = yield
 
