--- a/app/assets/stylesheets/group_requests.css.scss
+++ b/app/assets/stylesheets/group_requests.css.scss
@@ -2,6 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com
 
-body.group_requests.create {
-  textarea { height: 80px; }
+body.group_requests {
+  &.new, &.create {
+    textarea { height: 80px; }
+  }
 }
