invitations loggin page reformatted

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -132,6 +132,7 @@ a.btn-icon:hover { color: $dark-grey; }
 
 .pages.home p:last-child { margin-bottom: 0; }
 
+.invitations.show,
 .sessions.new,
 .pages.home,
 .pages.privacy,
